--- a/index2.html
+++ b/index2.html
@@ -1,23 +1,16 @@
 <html>
   <head>
-    <style>
-      video
-      {
-        display: block;
-        margin: 0 auto;
-      }
-    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
       $(document).ready(function(){
         $('video').on('ended',function(){
-          window.location.href = './werdle.html';
+          window.location.href = './konnections.html';
         });
       });
     </script>
   </head>
   <body>
-    <video width="960" height="720" controls>
+    <video width="320" height="240" controls>
       <source src="assets/movies/movie1.mp4" type="video/mp4">
     </video>
   </body>
