--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,12 @@
 <html>
   <head>
+    <style>
+      video
+      {
+        display: block;
+        margin: 0 auto;
+      }
+    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script>
       $(document).ready(function(){
@@ -10,8 +17,8 @@
     </script>
   </head>
   <body>
-    <video width="320" height="240" controls>
-      <source src="assets/movies/movie1.mp4" type="video/mp4">
+    <video width="960" height="720" controls>
+      <source src="assets/movies/movie2.mp4" type="video/mp4">
     </video>
   </body>
 </html>
