--- a/index3.html
+++ b/index3.html
@@ -1,10 +1,17 @@
 <html>
   <head>
+    <style>
+      video
+      {
+        display: block;
+        margin: 0 auto;
+      }
+    </style>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   </head>
   <body>
-    <video width="320" height="240" controls>
-      <source src="assets/movies/movie1.mp4" type="video/mp4">
+    <video width="960" height="720" controls>
+      <source src="assets/movies/movie3.mp4" type="video/mp4">
     </video>
   </body>
 </html>
